# oceanwave_forecast

./: .gitignore  2.0.0  Makefile  README.md  pyproject.toml
notebooks/: Benchmarking.ipynb  Benchmarking_Backtesting.ipynb  EDA.ipynb  Final_benchmarking.ipynb  ML_training.ipynb  ML_training_old.ipynb  ML_training_simple.ipynb  ML_tuning.ipynb  MLflow_Dashboard.ipynb  MLmodeling.ipynb  MLmodeling_testing.ipynb  MLtuning.ipynb  Preliminary_analysis.ipynb  Testing_sktime.ipynb  best_model.pth  covid_example_with_pytorch_forecasting.ipynb  covid_forecasting_tutorial.ipynb  temp.ipynb
notebooks/lightning_logs/version_0/: hparams.yaml
notebooks/lightning_logs/version_1/: hparams.yaml
notebooks/lightning_logs/version_10/: hparams.yaml
notebooks/lightning_logs/version_11/: hparams.yaml
notebooks/lightning_logs/version_12/: hparams.yaml
notebooks/lightning_logs/version_13/: hparams.yaml
notebooks/lightning_logs/version_14/: hparams.yaml
notebooks/lightning_logs/version_15/: hparams.yaml
notebooks/lightning_logs/version_16/: hparams.yaml
notebooks/lightning_logs/version_17/: hparams.yaml
oceanwave_forecast/: config.py  data_manager.py  data_pipeline.py  forecasting_utils.py  mlflow_utils.py  models.py  plotting.py  training.py
scripts/: sockeye_job1.pbs
tests/: .lr_find_6cb6c3d3-57ee-42a5-a95b-98b296bc993f.ckpt  ml_testing.ipynb  testing_data_formating.py  testing_lag.ipynb  testing_pytorch_forecast_synthetic_data.py  understanding_pytorch_forecasting.ipynb  understanding_timeseriesdataset.ipynb  visualize_pipeline.ipynb
(+45 files in other folders)
