[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oceanwave_forecast"
version = "0.0.1"
description = "Time series forecasting of oceanographic data from NOAA"
authors = [
  { name = "Akash Venkateshwaran" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["oceanwave_forecast"]
force_sort_within_sections = true


